--- a/qt/WeChat/logindialog.ui
+++ b/qt/WeChat/logindialog.ui
@@ -265,6 +265,9 @@
        <property name="text">
         <string>注册</string>
        </property>
+       <property name="flat">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
      <item>
@@ -408,13 +411,28 @@
         </font>
        </property>
        <property name="styleSheet">
-        <string notr="true">background-color: rgb(5, 193, 96);
-color: rgb(255, 255, 255);
+        <string notr="true">QPushButton#loginButton {
+    background-color: rgb(5, 193, 96);
+    color: rgb(255, 255, 255);
+    border: none; /* 移除边框 */
+    border-radius: 4px; /* 可选：添加圆角 */
+}
 
-</string>
+QPushButton#loginButton:hover {
+    background-color: rgb(4, 170, 85); /* 悬浮时稍微深一点的绿色 */
+    color: rgb(255, 255, 255);
+}
+
+QPushButton#loginButton:pressed {
+    background-color: rgb(3, 150, 75); /* 按下时更深的绿色 */
+    color: rgb(255, 255, 255);
+}</string>
        </property>
        <property name="text">
         <string>同意并登录</string>
+       </property>
+       <property name="flat">
+        <bool>false</bool>
        </property>
       </widget>
      </item>
@@ -452,40 +470,61 @@ color: rgb(255, 255, 255);
       </spacer>
      </item>
      <item>
-      <widget class="QLabel" name="findPasswordLabel">
-       <property name="font">
-        <font>
-         <family>黑体</family>
-        </font>
+      <layout class="QHBoxLayout" name="horizontalLayout_9">
+       <property name="spacing">
+        <number>4</number>
        </property>
-       <property name="styleSheet">
-        <string notr="true">color: rgb(97, 101, 154);</string>
-       </property>
-       <property name="text">
-        <string>找回密码</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignmentFlag::AlignRight|Qt::AlignmentFlag::AlignTrailing|Qt::AlignmentFlag::AlignVCenter</set>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="moreLabel">
-       <property name="font">
-        <font>
-         <family>黑体</family>
-        </font>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">color: rgb(97, 101, 154);</string>
-       </property>
-       <property name="text">
-        <string>更多选项</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft|Qt::AlignmentFlag::AlignVCenter</set>
-       </property>
-      </widget>
+       <item>
+        <widget class="QPushButton" name="pushButton_2">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>60</width>
+           <height>16777215</height>
+          </size>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">color: rgb(97, 101, 154);</string>
+         </property>
+         <property name="text">
+          <string>找回密码</string>
+         </property>
+         <property name="flat">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pushButton">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>40</width>
+           <height>16777215</height>
+          </size>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">color: rgb(97, 101, 154);</string>
+         </property>
+         <property name="text">
+          <string>更多</string>
+         </property>
+         <property name="flat">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </item>
      <item>
       <spacer name="horizontalSpacer_4">
