--- a/qt/WeChat/logindialog.ui
+++ b/qt/WeChat/logindialog.ui
@@ -45,6 +45,97 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
+    <layout class="QHBoxLayout" name="titlebar" stretch="5,8,2,0">
+     <item>
+      <widget class="QLabel" name="titleLabel">
+       <property name="font">
+        <font>
+         <family>微软雅黑</family>
+        </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">color: rgb(150, 150, 150);</string>
+       </property>
+       <property name="text">
+        <string>微信</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft|Qt::AlignmentFlag::AlignVCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer_10">
+       <property name="orientation">
+        <enum>Qt::Orientation::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="settingPB">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">#settingPB{
+	image: url(:/img/loginDialog/img/set.svg);
+	background-color: rgb(255, 255, 255);
+	border-radius: 4px;
+}
+
+#settingPB:pressed{
+	image: url(:/img/loginDialog/img/user.svg);
+	
+	background-color: rgb(172, 172, 172);
+}</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="quitPB">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">#quitPB{
+	image: url(:/img/loginDialog/img/quit.svg);
+	background-color: rgb(255, 255, 255);
+	border-radius: 4px;
+}
+
+#quitPB:hover{
+	image: url(:/img/loginDialog/img/quit_clicked.svg);
+	background-color: rgb(255, 85, 43);
+}
+
+#quitPB:pressed{
+	image: url(:/img/loginDialog/img/quit_clicked.svg);
+	background-color:rgb(216, 59, 19);
+}</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
     <spacer name="verticalSpacer_2">
      <property name="orientation">
       <enum>Qt::Orientation::Vertical</enum>
