--- a/qt/WeChat/mainwindow.ui
+++ b/qt/WeChat/mainwindow.ui
@@ -32,16 +32,8 @@
   <property name="styleSheet">
    <string notr="true"/>
   </property>
-  <widget class="QWidget" name="centralwidget"/>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>320</width>
-     <height>21</height>
-    </rect>
-   </property>
+  <widget class="QWidget" name="centralwidget">
+   <layout class="QVBoxLayout" name="verticalLayout" stretch=""/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
